--- a/slxmas.html
+++ b/slxmas.html
@@ -323,7 +323,7 @@
                 <br>
 
                 <div style="margin-top: 30px;margin-bottom: 30px;" class="quedate__first js-hidden js-share">
-                    <div style="border: 1px solid gray; width:80%" class="quedate__load"><font color="black">Envoyer à des groupes </font><span class="quedate__load-a js-hidden"></span>
+                    <div style="border: 1px solid gray; width:80%" class="quedate__load"><font color="white">Envoyer à des groupes </font><span class="quedate__load-a js-hidden"></span>
                     </div>
                     <div style="border: 1px solid gray;border-left: none; width:30%" class="quedate__load-icon">
                         <svg id="third-loading" class="quedate__load-animate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" shape-rendering: auto;" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="3.2rem">
